# Microservices_all_in_one

microservice_db/: apprunner.yaml  pyproject.toml
microservice_db/fastapi_neon/: main.py  settings.py
microservice_helloworld/uit-api-class/: pyproject.toml
